--- a/conectafreelance/src/app/componentes/usuario/usuarioProfesional/crud-profesional/add-profesional/add-profesional.component.html
+++ b/conectafreelance/src/app/componentes/usuario/usuarioProfesional/crud-profesional/add-profesional/add-profesional.component.html
@@ -43,8 +43,14 @@
         <div class="error">NO POSEE FORMATO DE EMAIL</div>
       }
 
-      <label for="foto" class="form-label">Seleccionar imagen de perfil</label>
-      <input type="file" class="form-control" id="foto" (change)="onFileChange($event)" accept="image/*" />
+
+
+      <label for="foto" class="form-control-label">
+        <img [src]="imageSrc" alt="Foto actual" />
+        <div>Subir foto</div>
+      </label>
+      <input type="file" class="form-control" id="foto" (change)="manejoDeArchivo($event)" accept="image/*">
+
 
       <label for="Cont">Contraseña</label>
       <input type="password" id="Cont" class="input" formControlName="contrasenia">
@@ -59,7 +65,6 @@
 
       <div class="btn-group">
         <button type="submit" class="btn btn-primary">📤 Registrarse</button>
-        <button type="button" class="btn btn-secondary">🛑 Cancelar</button>
       </div>
 
     </form>
