feat: agregar login y ajuste en registro de usuarios

--- a/conectafreelance/src/app/componentes/page-components/home-component/home-component.component.html
+++ b/conectafreelance/src/app/componentes/page-components/home-component/home-component.component.html
@@ -1,28 +1,27 @@
-<!-- Header -->
   <header class="header">
     <img src="logo.png" alt="ConectaFreelance" class="logo">
     <div class="auth-buttons">
-      <button class="btn btn-login">Iniciar Sesión</button>
+      <button class="btn btn-login" (click)="redirigirLogin()">Iniciar Sesión</button>
      <button class="btn btn-signup contractor"  (click)="redirigirRegistroContratador()">Crear Cuenta Contratadora</button>
       <button class="btn btn-signup professional" (click)="redirigirRegistroProfesional()">Crear Cuenta Profesional</button>
     </div>
   </header>
 
-  <!-- Main Content -->
   <main>
-    <!-- Hero Section -->
-    <section class="hero">
-      <h1>Conecta Tu Talento con Oportunidades</h1>
-      <p>Únete a nuestra plataforma y descubre posibilidades para profesionales y empresas.</p>
+      <section class="hero">
+      <h1>Donde el Talento se Encuentra con la Oportunidad</h1>
+      <p>Impulsa tu carrera o haz crecer tu empresa con el poder de las conexiones adecuadas.
+        En nuestra plataforma, los profesionales descubren caminos para desarrollarse, y las organizaciones
+        encuentran el talento que impulsa sus proyectos.
+        Creemos en el potencial de cada persona y en el valor de cada equipo: por eso, construimos un espacio
+        donde el crecimiento es mutuo, las metas se alinean y las oportunidades se multiplican.</p>
     </section>
 
-    <!-- About Section -->
     <section class="section about">
       <h2>¿Quiénes Somos?</h2>
       <p>Somos una plataforma que conecta profesionales con empresas en busca de talento excepcional. Transformamos el mercado laboral con soluciones ágiles y personalizadas, ofreciendo una comunidad vibrante para el talento y las oportunidades.</p>
     </section>
 
-    <!-- Objectives Section -->
     <section class="section objectives">
       <h2>Nuestros Objetivos</h2>
       <div class="grid">
@@ -41,7 +40,6 @@
       </div>
     </section>
 
-    <!-- Benefits Section -->
     <section class="section benefits">
       <h2>¿Por Qué Elegirnos?</h2>
       <div class="grid">
@@ -61,7 +59,6 @@
     </section>
   </main>
 
-  <!-- Footer -->
   <footer class="footer">
     <div class="footer-content">
       <div>
