--- a/conectafreelance/src/app/componentes/page-components/home-component/home-component.component.css
+++ b/conectafreelance/src/app/componentes/page-components/home-component/home-component.component.css
@@ -19,7 +19,7 @@ body {
   align-items: center;
   padding: 0.75rem 1.5rem;
   background: rgba(255, 255, 255, 0.9);
-  backdrop-filter: blur(8px); /* Glassmorphism effect */
+  backdrop-filter: blur(8px);
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
   position:relative;
   top: 0;
@@ -99,10 +99,10 @@ body {
 }
 
 .hero {
-  background: linear-gradient(136deg, rgba(0, 81, 255, 0.8), rgba(3, 60, 182, 0.4)), url('/trato.jpg');
+  background: url('/hero.png');
   background-size: cover;
   background-position: center;
-  min-height: 60vh;
+  min-height: 130vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
