--- a/conectafreelance/src/app/componentes/usuario/usuarioProfesional/crud-profesional/perfil-profesional/perfil-profesional.component.html
+++ b/conectafreelance/src/app/componentes/usuario/usuarioProfesional/crud-profesional/perfil-profesional/perfil-profesional.component.html
@@ -10,6 +10,8 @@
     </div>
   </header>
 
+  <a [routerLink]="['/modPerProf', usuarioProf.id]">Ir a modificar</a>
+
   <section class="profile-details">
     <h2>Sobre mí</h2>
     <p class="description">{{ usuarioProf.descripcion }}</p>
