Crear funcionalidad de publicaciones

--- a/conectafreelance/src/app/componentes/usuario/usuarioProfesional/crud-profesional/perfil-profesional/perfil-profesional.component.html
+++ b/conectafreelance/src/app/componentes/usuario/usuarioProfesional/crud-profesional/perfil-profesional/perfil-profesional.component.html
@@ -1,3 +1,4 @@
+
 <div class="profile-container">
   <!-- Encabezado del perfil -->
   <header class="profile-header">
@@ -34,4 +35,10 @@
       </div>
     </div>
   </section>
+
 </div>
+
+
+
+ <app-add-publicacion></app-add-publicacion>
+
