--- a/conectafreelance/src/app/componentes/comentario/list-comentario/list-comentario.component.html
+++ b/conectafreelance/src/app/componentes/comentario/list-comentario/list-comentario.component.html
@@ -6,17 +6,17 @@
     <p class="no-publicaciones">No hay comentarios para mostrar.</p>
   } @else {
     @for (comentario of comentarios; track $index) {
-      <div class="comentario-card" [class.reported]="comentario.reportado">
+      <div class="comentario-card" [class.reported]="comentario.reportada">
         <div class="comentario-header">
             <img
-              [src]="imgPerfCreadores[comentario.fotoCreador]"
-              alt="Foto de {{ comentario.nombreCreador }}"
+              [src]="imgPerfCreadores[getUsuarioById(comentario.idCreador)?.urlFoto || ''] || 'public/avatar.png'"
+              alt="Foto de {{ getUsuarioById(comentario.idCreador)?.nombreCompleto }}"
               class="avatar"
               loading="lazy"
             />
 
           <div class="creador-info">
-            <span class="nombre-creador">{{ comentario.nombreCreador }}</span>
+            <span class="nombre-creador">{{ getUsuarioById(comentario.idCreador)?.nombreCompleto }}</span>
             <span class="puntaje">Puntaje: {{ comentario.puntaje }}/5</span>
           </div>
         </div>
@@ -24,7 +24,7 @@
           <p>{{ comentario.contenido }}</p>
         </div>
         <div class="comentario-actions">
-          @if (!comentario.reportado) {
+          @if (!comentario.reportada) {
             <button
               (click)="reportarComentario(comentario.id)"
               class="report-button"
