--- a/conectafreelance/src/app/componentes/usuario/usuarioContratador/crud-contratador/add-contratador/add-contratador.component.html
+++ b/conectafreelance/src/app/componentes/usuario/usuarioContratador/crud-contratador/add-contratador/add-contratador.component.html
@@ -10,6 +10,9 @@
       @if (formularioUsuarioContratador.controls["nombreCompleto"].touched && formularioUsuarioContratador.controls["nombreCompleto"].getError("required")) {
         <div class="error">CAMPO OBLIGATORIO</div>
       }
+      @if(formularioUsuarioContratador.controls['nombreCompleto'].touched && formularioUsuarioContratador.controls['nombreCompleto'].hasError('whitespace')){
+        <div class="error">No se aceptan cadenas vacias</div>
+      }
 
       <label for="email">Email</label>
       <input
@@ -23,6 +26,7 @@
       @if (formularioUsuarioContratador.controls["email"].touched && formularioUsuarioContratador.controls["email"].getError("email")) {
         <div class="error">NO POSEE FORMATO DE EMAIL</div>
       }
+
 
       <label for="foto" class="form-control-label">
         <img [src]="imgSrc" alt="Foto actual" />
@@ -41,6 +45,9 @@
         id="trabajaEmpresa"
         class="input"
         formControlName="empresaRepresentada">
+      @if(formularioUsuarioContratador.controls['empresaRepresentada'].touched && formularioUsuarioContratador.controls['empresaRepresentada'].hasError('whitespace')){
+        <div class="error">No se aceptan cadenas vacias</div>
+      }
 
 
       <label for="Cont">Contraseña</label>
