--- a/conectafreelance/src/app/componentes/usuario/usuarioProfesional/crud-profesional/modify-profesional/modify-profesional.component.html
+++ b/conectafreelance/src/app/componentes/usuario/usuarioProfesional/crud-profesional/modify-profesional/modify-profesional.component.html
@@ -13,6 +13,11 @@
       @if (formulario.controls['nombreCompleto'].touched && formulario.controls['nombreCompleto'].hasError('required')) {
         <div class="error">Campo obligatorio</div>
       }
+      @if(formulario.controls['nombreCompleto'].touched && formulario.controls['nombreCompleto'].hasError('whitespace')){
+
+        <div class="error">No se aceptan cadenas vacias</div>
+
+      }
 
       <label for="email">Correo Electrónico</label>
       <input type="email" id="email" class="input" formControlName="email">
@@ -39,6 +44,11 @@
       @if (formulario.controls['profesion'].touched && formulario.controls['profesion'].hasError('required')) {
         <div class="error">Campo obligatorio</div>
       }
+      @if(formulario.controls['profesion'].touched && formulario.controls['profesion'].hasError('whitespace')){
+
+        <div class="error">No se aceptan cadenas vacias</div>
+
+      }
 
       <label for="descripcion">Descripción</label>
       <textarea id="descripcion" class="input textarea" formControlName="descripcion" rows="5"></textarea>
@@ -51,6 +61,11 @@
       @if (formulario.controls['descripcion'].touched && formulario.controls['descripcion'].hasError('maxlength')) {
         <div class="error">La descripción no puede exceder los 1000 caracteres</div>
       }
+      @if(formulario.controls['descripcion'].touched && formulario.controls['descripcion'].hasError('whitespace')){
+
+        <div class="error">No se aceptan cadenas vacias</div>
+
+      }
 
       <label for="ciudad">Ciudad</label>
       <input type="text" id="ciudad" class="input" formControlName="ciudad">
@@ -58,16 +73,26 @@
         <div class="error">Campo obligatorio</div>
       }
 
+      @if(formulario.controls['ciudad'].touched && formulario.controls['ciudad'].hasError('whitespace')){
+        <div class="error">No se aceptan cadenas vacias</div>
+      }
+
       <label for="provincia">Provincia</label>
       <input type="text" id="provincia" class="input" formControlName="provincia">
       @if (formulario.controls['provincia'].touched && formulario.controls['provincia'].hasError('required')) {
         <div class="error">Campo obligatorio</div>
+      }
+      @if(formulario.controls['provincia'].touched && formulario.controls['provincia'].hasError('whitespace')){
+        <div class="error">No se aceptan cadenas vacias</div>
       }
 
       <label for="pais">País</label>
       <input type="text" id="pais" class="input" formControlName="pais">
       @if (formulario.controls['pais'].touched && formulario.controls['pais'].hasError('required')) {
         <div class="error">Campo obligatorio</div>
+      }
+      @if(formulario.controls['pais'].touched && formulario.controls['pais'].hasError('whitespace')){
+        <div class="error">No se aceptan cadenas vacias</div>
       }
 
       <div class="form-actions">
